@@ -1,3 +1,12 @@
+Sun Jun 06 06:08:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+	* protocols/ace/INet/HTTP_Status.cpp:
+	* protocols/ace/INet/HTTP_Status.h:
+	  Fix for nameclash with standard macro in VxWorks.
+
+	* protocols/ace/INet/HTTP_StreamPolicy.cpp:
+	  Bugfix for incorrect array index.
+
 Sat Jun 05 07:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
 
 	* protocols/ace/INet/ConnectionCache.cpp:
